# memboot

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secret-scan.yml  security.yml
src/memboot/: __init__.py  __main__.py  chunker.py  cli.py  context.py  embedder.py  exceptions.py  gates.py  indexer.py  licensing.py  mcp_server.py  memory.py  models.py  query.py  store.py  telemetry.py  watcher.py
src/memboot/ingest/: __init__.py  files.py  pdf.py  web.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_context.py  test_embedder.py  test_exceptions.py  test_gates.py  test_indexer.py  test_ingest.py  test_licensing.py  test_main_module.py  test_mcp_server.py  test_memory.py  test_models.py  test_query.py  test_store.py  test_telemetry.py  test_watcher.py
