[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memboot"
version = "0.2.0"
description = "Zero-infrastructure persistent memory for any LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "AreteDriver"}]
keywords = ["memory", "llm", "mcp", "embeddings", "vector-search", "ai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.0"]
mcp = ["mcp>=1.0"]
pdf = ["pdfplumber>=0.10"]
watch = ["watchdog>=3.0"]
web = ["trafilatura>=1.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
memboot = "memboot.cli:app"

[project.urls]
Homepage = "https://github.com/AreteDriver/memboot"
Repository = "https://github.com/AreteDriver/memboot"
Issues = "https://github.com/AreteDriver/memboot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/memboot/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=memboot --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.11"
strict = true
